# collei

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 04ecea0f8828_add_clients_tables.py  4792ff4d87a5_init_auth_tables.py  5a1b2c3d4e5f_add_configs_table.py  6b2c3d4e5f6a_add_load_now_table.py  7c3d4e5f6a7b_add_boot_time_to_server_status.py  8d4e5f6a7b8c_add_billing_traffic_and_flow.py  9e5f6a7b8c9d_add_alerts_and_notifications.py  ae7f9b2df2e7_add_servers_top_and_is_approved.py  af1b2c3d4e5f_provider_id_and_type.py  bf2c3d4e5f6b_add_notify_recovery_to_alert_rules.py  cf3d4e5f6a8c_add_channel_id_to_mapping_pk.py  df4e5f6a7b9d_split_alert_rule_mapping.py  ef5a6b7c8d9e_add_billing_cost_code_and_expiry.py  fg6a7b8c9d0e_add_custom_message_and_traffic_step.py  gh7b8c9d0e1f_add_network_monitoring_tables.py
app/api/: deps.py
app/api/v1/: agent.py  auth.py  clients.py  config.py  health.py  router.py  ws.py
app/api/v1/clients/: __init__.py  _helpers.py  billing.py  groups.py  (+4 more)
app/core/: alert_engine.py  config.py  config_cache.py  geoip.py  notifier.py  security.py  server_cache.py  tasks.py  ws_manager.py
app/crud/: auth.py  clients.py  config.py  monitoring.py  network.py  notification.py
app/db/: base.py  base_class.py  session.py
app/models/: auth.py  clients.py  config.py  monitoring.py  network.py  notification.py
app/schemas/: agent.py  auth.py  clients.py  network.py  notification.py
docker/: entrypoint.sh  nginx.conf
(+6 files in other folders)
